scrollbar and upgrade navbar fix

--- a/style.css
+++ b/style.css
@@ -281,11 +281,15 @@ section{
     border-radius: 40px;
     padding: 10px 30px;
 }
+.navv{
+    position: fixed;
+    width: calc(100% - 200px);
+    opacity: 0.7;
+}
 .navv .box{
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    width: 100%;
     height: 80px;
     padding-right: 30px;
 }
@@ -293,7 +297,8 @@ section{
     width: 100%;
 }
 .main-spotify{
-    height: calc(100% - 80px);
+    padding-top: 80px;;
+    height: calc(100%);
     color: #b3b3b3;
     overflow: auto;
 }
@@ -375,3 +380,38 @@ section{
 .brano:hover .hover_overlay{
     display: block;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+</style>
